tests/types/errors/undefined_identifier.mog
fn main() void {
    app.update(1)
}

main()
